--- a/style.css
+++ b/style.css
@@ -27,9 +27,7 @@ body {
 
 /* Allgemeine Section-Stile */
 section {
-    padding: 25px;
     position: relative;
-    border-top: 2px solid #444;
     margin: 0; 
 }
 
@@ -37,7 +35,7 @@ section h2 {
     font-size: 2rem;
     font-weight: 600;
     margin-bottom: 30px;
-    border-bottom: 2px solid #ffffff50; /* leichte Linie unter Header */
+    border-bottom: 2px solid #ffffff50; 
     padding-bottom: 10px;
 }
 
