--- a/style.css
+++ b/style.css
@@ -105,6 +105,12 @@ section h2 {
     color: #111;
 }
 
+.card-subtitle {
+    display: block;
+    font-size: 0.9rem;
+    line-height: 1.4;
+}
+
 /* Galerie-Button zentrieren (falls nicht schon) */
 .project-thumb + .card-body .d-flex {
     justify-content: center;
@@ -126,6 +132,7 @@ section h2 {
 #contact i {
     font-size: 1.2rem;
 }
+
 
 
 /* Footer */
